Try filtering similar chords

--- a/pom.xml
+++ b/pom.xml
@@ -212,8 +212,14 @@
             <artifactId>hsqldb</artifactId>
             <version>2.4.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
 
-	</dependencies>
+    </dependencies>
 
 	<build>
 		<finalName>chords</finalName>
